# codex_test

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  test_main.py
agent/: Dockerfile  main.py  requirements.txt
agent/generated_scripts/: pca_calculation_202602262348.py  squared_pca_components.json
sandbox/: Dockerfile  server.py
